Another attempt to fix wrapping nav buttons in mobile Chrome

--- a/help/css/grist.css
+++ b/help/css/grist.css
@@ -92,9 +92,8 @@
   padding-top: 48px;
 }
 
-.wm-vcentered > .btn-sm {
-  min-width: 33px;
-}
+.btn-group.wm-vcentered { display: inline-flex; }
+.btn-group.wm-vcentered > .btn.btn-sm { float: none; }
 
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
